--- a/client/public/style.css
+++ b/client/public/style.css
@@ -1,3 +1,7 @@
+:root {
+  --nav-height: 80px;
+}
+
 .light-theme {
   --font-dark: #041b15;
   --font-light: #d9d9d9;
@@ -5,6 +9,7 @@
   --highlight: #8a365e;
   --background: #caafb3;
   --beige: #beb7a4;
+  --horizontal-shadow: 	drop-shadow(0px 5px 13px rgba(0, 0, 0, 0.43));
 }
 
 .dark-theme {
@@ -42,6 +47,13 @@
   line-height: 23px;
   letter-spacing: -0.02em;
 }
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 
 @media screen and (max-width: 450px) {
   .h1-desktop {
