--- a/client/public/style.css
+++ b/client/public/style.css
@@ -1,4 +1,3 @@
-
 /* .light-theme {} */
 
 html {
@@ -12,10 +11,11 @@ html {
 
 #root {
   background-color: var(--background-opacity);
+  overflow-x: hidden;
 }
 
 :root {
-    --nav-height: 80px;
+  --nav-height: 80px;
   --font-dark: #041b15;
   --font-light: #d9d9d9;
   --shadow: #084233;
@@ -23,7 +23,7 @@ html {
   --background: #caafb3;
   --background-opacity: rgba(245, 234, 235, 0.8);
   --beige: #beb7a4;
-  --horizontal-shadow: 	drop-shadow(0px 5px 13px rgba(0, 0, 0, 0.43));
+  --horizontal-shadow: drop-shadow(0px 5px 13px rgba(0, 0, 0, 0.43));
 }
 
 .dark-theme {
@@ -68,7 +68,6 @@ html {
   padding: 0;
   box-sizing: border-box;
 }
-
 
 @media screen and (max-width: 450px) {
   .h1-desktop {
