--- a/client/src/App.module.css
+++ b/client/src/App.module.css
@@ -1,5 +1,4 @@
 .container {
-  height: 100vh;
-  background-color: #fff;
+  background-color: var(--background);
   box-shadow: -10px 0px 10px 1px rgba(0, 0, 0, 0.24);
 }
