--- a/client/src/components/Header/Nav.module.css
+++ b/client/src/components/Header/Nav.module.css
@@ -13,7 +13,10 @@
   height: var(--nav-height);
   position: fixed;
   padding: 10px 10px;
+  background-color: var(--highlight);
+  width: 100%;
 }
+
 .navNormal {
   pointer-events: all;
 }
@@ -34,6 +37,7 @@
   display: flex;
   flex-direction: column;
   transform: translateX(-100%);
+  height: 100vh;
 }
 
 ul a {
