--- a/client/src/components/Footer/Footer.module.css
+++ b/client/src/components/Footer/Footer.module.css
@@ -33,7 +33,7 @@
   color: var(--font-light);
 }
 .ctaText h4 {
-  color: #fff;
+  color: var(--white);
   font-size: 20px;
   font-weight: 600;
   margin-bottom: 2px;
@@ -56,7 +56,7 @@
 
 .footerCol h4 {
   font-size: 20px;
-  color: #ffffff;
+  color: var(--white);
   text-transform: uppercase;
   margin-bottom: 35px;
   font-weight: 600;
@@ -90,7 +90,7 @@
 }
 
 .footerCol ul li a:hover {
-  color: #ffffff;
+  color: var(--white);
   padding-left: 8px;
 }
 
@@ -104,12 +104,12 @@
   text-align: center;
   line-height: 40px;
   border-radius: 50%;
-  color: #ffffff;
+  color: var(--white);
   transition: all 0.5s ease;
 }
 .footerCol .socialLinks a:hover {
   color: var(--highlight);
-  background-color: #ffffff;
+  background-color: var(--white);
 }
 
 .footerCol .socialLinks .facebook,
@@ -122,8 +122,8 @@
 .footerLogo {
   margin-bottom: 30px;
 }
-.footerLogo img {
-  max-width: 200px;
+.footerLogo svg {
+  width: 100%;
 }
 .footerText p {
   margin-bottom: 14px;
@@ -166,5 +166,9 @@
 
   .footerDivider {
     max-width: 95%;
+  }
+
+  .footerLogo {
+    margin: 0px auto 30px;
   }
 }
