--- a/client/src/pages/Signup/NewUserForm.module.css
+++ b/client/src/pages/Signup/NewUserForm.module.css
@@ -26,6 +26,10 @@
   padding: 5px;
 }
 
+.btn-next button {
+  max-width: 40%;
+}
+
 @media screen and (max-width: 740px) {
   .signupInput {
     width: 350px;
