--- a/client/src/pages/Home/Home.module.css
+++ b/client/src/pages/Home/Home.module.css
@@ -33,7 +33,8 @@
   justify-content: space-between;
   padding: 3% 5%;
   background-color: var(--white);
-  width: 350px;
+  max-width: 450px;
+  min-width: 200px;
   height: 200px;
 }
 
@@ -45,6 +46,11 @@
 .cardText {
   font-weight: 700;
   color: var(--highlight);
+  font-family: "Ubuntu", sans-serif;
+  font-style: normal;
+  font-size: 15px;
+  line-height: 23px;
+  letter-spacing: -0.02em;
 }
 
 /* Media Queries */
