--- a/client/src/components/Header/Nav.module.css
+++ b/client/src/components/Header/Nav.module.css
@@ -15,6 +15,8 @@
   padding: 10px 10px;
   background-color: var(--highlight);
   width: 100%;
+  z-index: 3;
+  box-shadow: 0px 1px 6px black;
 }
 
 .navNormal {
@@ -38,6 +40,8 @@
   flex-direction: column;
   transform: translateX(-100%);
   height: 100vh;
+  z-index: 3;
+  box-shadow: 0px 1px 6px black;
 }
 
 ul a {
@@ -80,6 +84,7 @@ ul a {
     background-color: var(--highlight);
     transform: none;
   }
+
   .nav ul {
     display: flex;
     gap: 20px;
