--- a/client/src/components/JobCard.module.css
+++ b/client/src/components/JobCard.module.css
@@ -1,24 +1,43 @@
 .job-card {
+  box-sizing: border-box;
   display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 1rem;
+  flex-direction: column;
   border: 2px solid var(--highlight);
-  width: 40%;
+  width: 100%;
   margin: 5px;
   border-radius: 5px;
   padding: 15px;
   transition: 0.4s;
 }
-
 .job-card:hover {
   border: 2px solid var(--highlight);
   box-shadow: 4px 4px 14px #f391c1;
   transform: scale(1.02);
 }
+.jobCardUpperDiv {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 1rem;
+}
+.jobCardBelowDiv {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+.jobCardBelowDiv h5 {
+  padding-right: 30px;
+}
 
-.from-to,
-.size {
+.itemDiv {
+  width: 30%;
+}
+.fromToDiv {
+  width: 20%;
   display: flex;
   flex-direction: column;
+}
+.dateDiv {
+  width: 40%;
 }
