jobs model updated

--- a/client/src/pages/Dashboard/Dashboard.module.css
+++ b/client/src/pages/Dashboard/Dashboard.module.css
@@ -3,6 +3,7 @@
   width: 50%;
   align-items: center;
   justify-content: center;
+  margin-bottom: 50px;
 }
 .buttonsAndCardsDiv {
   display: flex;
