--- a/client/src/components/Button.module.css
+++ b/client/src/components/Button.module.css
@@ -53,7 +53,7 @@
 
 .buttonBorder {
   background: transparent;
-  width: 450px;
+  width: 100%;
   height: 54px;
   border-radius: 5px;
   cursor: pointer;
