--- a/client/src/pages/Dashboard/JobCard.module.css
+++ b/client/src/pages/Dashboard/JobCard.module.css
@@ -11,6 +11,7 @@
   border-radius: 5px;
   padding: 15px;
   transition: 0.4s;
+  cursor: pointer;
 }
 .job-card:hover {
   border: 2px solid var(--highlight);
