--- a/client/src/pages/Home/Home.module.css
+++ b/client/src/pages/Home/Home.module.css
@@ -10,6 +10,10 @@
   margin: 5% auto;
 }
 
+.homePage p {
+  margin-bottom: 50px;
+}
+
 .homePage button {
   width: 450px;
 }
@@ -20,6 +24,10 @@
 
 .logoContainer {
   width: 450px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
 }
 
 .allCards {
@@ -36,7 +44,7 @@
   align-items: center;
   justify-content: space-between;
   padding: 3% 5%;
-  background-color: var(--white);
+  background-color: var(--beige);
   max-width: 450px;
   min-width: 200px;
   height: 200px;
@@ -78,5 +86,9 @@
     height: 100px;
     margin: 3% auto;
     padding: 10% 5%;
+  }
+
+  .cardText {
+    margin-top: 50px;
   }
 }
