--- a/client/src/components/Header/Nav.module.css
+++ b/client/src/components/Header/Nav.module.css
@@ -16,7 +16,7 @@
   background-color: var(--highlight);
   width: 100%;
   z-index: 3;
-  box-shadow: 0px 1px 6px black;
+  box-shadow: 0px 1px 2px black;
 }
 
 .navNormal {
@@ -41,18 +41,19 @@
   transform: translateX(-100%);
   height: 100vh;
   z-index: 3;
-  box-shadow: 0px 1px 6px black;
+  /* box-shadow: 0px -7px 6px black; */
+  background-color: var(--font-dark);
 }
 
 ul a {
   list-style: none;
   text-decoration: none;
   pointer-events: all;
-  color: var(--font-dark);
+  color: var(--font-light);
 }
 
 .nav svg {
-  color: var(--highlight);
+  color: var(--white);
   height: var(--nav-height);
   padding: 10px 0;
   align-self: center;
@@ -69,6 +70,15 @@ ul a {
   width: 20px;
   height: 20px;
   padding: 0;
+  color: var(--white);
+}
+
+.logoDiv {
+  margin-right: auto;
+}
+
+.logoDiv svg {
+  margin-left: -90px;
 }
 
 @media screen and (min-width: 740px) {
@@ -88,6 +98,7 @@ ul a {
   .nav ul {
     display: flex;
     gap: 20px;
+    margin-right: 15%;
   }
 
   .nav ul a {
@@ -97,9 +108,13 @@ ul a {
 
   .nav svg {
     color: var(--white);
-    width: 100px;
+    width: 160px;
     height: var(--nav-height);
     padding: 10px 0;
     align-self: center;
+  }
+
+  .logoDiv svg {
+    margin-left: 170%;
   }
 }
