--- a/client/src/components/Header/Nav.module.css
+++ b/client/src/components/Header/Nav.module.css
@@ -81,6 +81,17 @@ ul a {
   margin-left: -90px;
 }
 
+@media screen and (min-width: 1400px) {
+  .logoDiv svg {
+    margin-left: 170%;
+  }
+}
+@media screen and (min-width: 1000px) {
+  .logoDiv svg {
+    margin-left: 100%;
+  }
+}
+
 @media screen and (min-width: 740px) {
   .drawer {
     display: flex;
@@ -115,6 +126,6 @@ ul a {
   }
 
   .logoDiv svg {
-    margin-left: 170%;
+    margin-left: 70%;
   }
 }
