--- a/client/src/pages/Login/Login.module.css
+++ b/client/src/pages/Login/Login.module.css
@@ -1,8 +1,3 @@
-.btn-login {
-  background-color: red;
-  max-width: 40%;
-}
-
 .login {
   width: 95vw;
   display: flex;
@@ -27,8 +22,18 @@
   padding: 5px;
 }
 
+.singleButton {
+  width: 450px;
+  margin-top: 0px;
+}
+
 @media screen and (max-width: 740px) {
   .loginInput {
-    width: 80vw;
+    width: 330px;
+  }
+
+  .singleButton {
+    width: 330px;
+    margin-top: 10px;
   }
 }
