--- a/client/src/pages/Profile/ProfilePage.module.css
+++ b/client/src/pages/Profile/ProfilePage.module.css
@@ -117,6 +117,25 @@
   height: 500px;
 }
 
+.deletePrompt {
+  display: flex;
+  flex-direction: column;
+  width: 25%;
+  margin: auto;
+  padding: 20px;
+  border: 3px solid var(--highlight);
+  border-radius: 10px;
+  background-color: var(--beige);
+}
+
+.deletePrompt p {
+  text-align: center;
+  margin-bottom: 0;
+}
+
+.red {
+  color: red;
+}
 @media screen and (max-width: 740px) {
   .profilePage {
     max-width: 90vw;
@@ -145,14 +164,25 @@
   }
 
   .buttonDiv {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    width: 200px;
-    margin: 20px auto;
+    max-width: 100vw;
   }
 
   .singleButton {
-    width: 65px;
+    max-width: 40vw;
+  }
+
+  .deletePrompt {
+    width: 90%;
+  }
+}
+
+@media screen and (max-width: 1400px) {
+  .deletePrompt {
+    width: 35%;
+  }
+}
+@media screen and (max-width: 1000px) {
+  .deletePrompt {
+    width: 60%;
   }
 }
