--- a/client/src/pages/Job/JobDetails.module.css
+++ b/client/src/pages/Job/JobDetails.module.css
@@ -41,6 +41,55 @@
   gap: 20px;
 } */
 
+/* <select> styles */
+.select select {
+  /* Reset Select */
+  appearance: none;
+  outline: 0;
+  border: 2px solid var(--highlight);
+  box-shadow: none;
+  /* Personalize */
+  flex: 1;
+  padding: 0 1em;
+  color: var(--highlight);
+  font-size: 1.1em;
+  background-image: none;
+  cursor: pointer;
+}
+
+/* Remove IE arrow */
+.select select::-ms-expand {
+  display: none;
+}
+/* Custom Select wrapper */
+.select {
+  position: relative;
+  display: flex;
+  width: 20em;
+  height: 3em;
+  border-radius: 0.25em;
+  overflow: hidden;
+  margin-top: 1.4em;
+  margin: 1rem auto;
+}
+
+/* Arrow */
+.select::after {
+  content: "\25BC";
+  position: absolute;
+  top: 0;
+  right: 0;
+  padding: 1em;
+  background-color: #34495e;
+  color: var(--white);
+  transition: 0.25s all ease;
+  pointer-events: none;
+}
+/* Transition */
+.select:hover::after {
+  color: var(--white);
+}
+
 @media screen and (min-width: 740px) {
   .jobView {
     display: grid;
