--- a/client/src/components/FilterAndSort/FilterAndSort.module.css
+++ b/client/src/components/FilterAndSort/FilterAndSort.module.css
@@ -6,6 +6,7 @@
   text-align: center;
   border-radius: 4px;
   padding: 0.5rem 1rem;
+  flex-wrap: wrap;
 }
 
 .whl {
@@ -22,4 +23,29 @@ select {
 .date {
   display: flex;
   gap: 0.7rem;
+}
+
+.dates input {
+  width: 110px;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+.dates input[type="number"] {
+  -moz-appearance: textfield;
+}
+
+.btn-filter button {
+  height: 70%;
+  width: 20rem;
+  margin: .5rem 0;
+  padding: 5px;
+  border-radius: 4px;
+  border: none;
+  background-color: var(--highlight);
+  color: var(--font-light);
 }
