--- a/client/src/components/FilterAndSort/FilterAndSort.module.css
+++ b/client/src/components/FilterAndSort/FilterAndSort.module.css
@@ -42,10 +42,18 @@ input::-webkit-inner-spin-button {
 .btn-filter button {
   height: 70%;
   width: 20rem;
-  margin: .5rem 0;
+  margin: 0.5rem 0;
   padding: 5px;
   border-radius: 4px;
   border: none;
   background-color: var(--highlight);
   color: var(--font-light);
+  cursor: pointer;
+  transition: 0.2s;
+}
+
+.btn-filter button:hover {
+  border: 2px solid var(--highlight);
+  box-shadow: 3px 3px 10px var(--highlight-light);
+  transform: scale(1.005);
 }
