--- a/client/src/pages/Home/Home.module.css
+++ b/client/src/pages/Home/Home.module.css
@@ -7,7 +7,7 @@
   gap: 10px;
   align-items: center;
   text-align: center;
-  margin: 5% auto;
+  margin: 12% auto;
 }
 
 .homePage p {
@@ -28,6 +28,18 @@
   justify-content: center;
   align-items: center;
   margin: auto;
+}
+
+.graphContainer {
+  margin-top: 20px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.graph {
+  width: 50%;
 }
 
 .allCards {
