styled the component for accepted drivers

--- a/client/src/pages/Job/JobDetails.module.css
+++ b/client/src/pages/Job/JobDetails.module.css
@@ -1,6 +1,7 @@
 .formClass {
   display: grid;
   grid-template-columns: repeat(12, 1fr);
+  max-width: 100%;
 }
 
 .formClass > * {
@@ -32,6 +33,20 @@
 .buttonCancel {
   background-color: red;
   max-width: 40%;
+}
+
+.acceptedDeliverers {
+  list-style: none;
+}
+.acceptedDeliverers li {
+  padding: 5px 0px 5px 0px;
+  border-bottom: 2px solid var(--font-dark);
+}
+
+.acceptedDriversSection p {
+  background-color: var(--highlight);
+  color: var(--font-light);
+  padding: 5px 0px 5px 0px;
 }
 
 /* <select> styles */
