--- a/client/src/components/FilterAndSort/FilterAndSort.module.css
+++ b/client/src/components/FilterAndSort/FilterAndSort.module.css
@@ -5,8 +5,11 @@
   color: var(--font-light);
   text-align: center;
   border-radius: 4px;
-  padding: 0.5rem 1rem;
+  padding: 2px 0px 4px 0px;
   flex-wrap: wrap;
+  width: 97.5%;
+  margin: 20px auto;
+  margin-top: 5px;
 }
 
 .whl {
@@ -46,7 +49,7 @@ input::-webkit-inner-spin-button {
 
 .btn-filter button {
   height: 70%;
-  width: 10rem;
+  width: 5rem;
   margin: 0.5rem 0;
   padding: 5px;
   border-radius: 4px;
