--- a/client/src/pages/Dashboard/Dashboard.module.css
+++ b/client/src/pages/Dashboard/Dashboard.module.css
@@ -1,8 +1,6 @@
 .container {
   margin: 0px auto;
   width: 50%;
-  align-items: center;
-  justify-content: center;
   margin-bottom: 50px;
   padding: 5px;
 }
@@ -23,22 +21,24 @@
 }
 .cardsDiv {
   width: 100%;
+  margin: auto;
   display: flex;
   justify-content: center;
   align-items: center;
-  /* margin-left: 5px; */
   flex-direction: column;
 }
 .cardsDiv ul {
-  width: 100%;
+  width: 99.5%;
+  margin: 20px auto;
   display: flex;
   margin: auto;
   flex-direction: column;
-  justify-content: space-evenly;
+  align-items: center;
+  justify-content: center;
   list-style: none;
 }
 .cardsDiv ul li {
-  width: 100%;
+  width: 98%;
   margin: auto;
 }
 
