--- a/client/src/pages/Dashboard/JobCard.module.css
+++ b/client/src/pages/Dashboard/JobCard.module.css
@@ -1,15 +1,14 @@
 .job-card {
   box-sizing: border-box;
   display: flex;
-  flex-direction: row;
   justify-content: space-evenly;
   gap: 1rem;
   align-items: center;
   border: 2px solid var(--highlight);
   width: 100%;
-  margin: 5px;
+  margin: 5px auto;
   border-radius: 5px;
-  padding: 15px;
+  padding: 10px;
   transition: 0.4s;
   cursor: pointer;
 }
