--- a/client/src/pages/About/About.module.css
+++ b/client/src/pages/About/About.module.css
@@ -1,4 +1,5 @@
-.aboutSection {
+.aboutSection,
+.graphSection {
   padding: 1rem;
   text-align: center;
   background-color: var(--white);
@@ -162,4 +163,16 @@ main .profile:nth-child(6) {
     padding-top: 40px;
     padding-bottom: 40px;
   }
+}
+
+.graphContainer {
+  margin-top: 20px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.graph {
+  width: 50%;
 }
