--- a/client/src/pages/Dashboard/JobCard.module.css
+++ b/client/src/pages/Dashboard/JobCard.module.css
@@ -1,7 +1,7 @@
 .job-card {
   box-sizing: border-box;
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-around;
   gap: 1rem;
   align-items: center;
   border: 2px solid var(--highlight);
@@ -11,6 +11,7 @@
   padding: 10px;
   transition: 0.4s;
   cursor: pointer;
+  text-align: center;
 }
 .job-card:hover {
   border: 2px solid var(--highlight);
@@ -39,6 +40,12 @@
   margin: auto;
 }
 
+.item h3 {
+  width: 100%;
+  font-size: 23px;
+  text-transform: capitalize;
+}
+
 .itemDiv {
   width: 30%;
   margin: auto;
@@ -51,7 +58,6 @@
   font-size: 15px;
   line-height: 23px;
   letter-spacing: -0.02em;
-  text-align: center;
 }
 
 .itemDiv img {
@@ -59,6 +65,7 @@
   display: block;
   margin: 5px auto;
   padding: 0.2rem;
+  min-width: 100%;
 }
 
 .fromToDiv {
@@ -66,6 +73,22 @@
   display: flex;
   flex-direction: column;
   margin: auto;
+  align-items: flex-start;
+}
+
+.fromToDiv h5,
+.dateDiv h5,
+.size h5 {
+  margin-bottom: 0.2rem;
+  font-size: 15px;
+}
+
+.fromToDiv h5 span,
+.dateDiv h5 span,
+.size h5 span {
+  margin-left: 5px;
+  font-size: 14px;
+  color: rgb(87, 87, 87);
 }
 
 .dateDiv {
@@ -74,13 +97,43 @@
 
 @media screen and (max-width: 740px) {
   .job-card {
-    width: 100%;
+    min-width: 100%;
     margin: 5px 0px;
-    height: 110px;
+    min-height: 110px;
+    padding: 10px 20px;
+  }
+  .item {
+    width: 25%;
+  }
+  .item h3 {
+    font-size: 15px;
+  }
+  .itemDiv {
+    text-align: center;
+  }
+  .itemDiv img {
+    max-height: 60px;
+    margin: 0 auto;
+  }
+  .itemDiv h3 {
+    font-size: 12px;
   }
 
-  .itemDiv img {
-    height: 60px;
-    margin: 0 auto;
+  .size,
+  .itemDiv,
+  .fromToDiv,
+  .dateDiv {
+    width: 20%;
+  }
+  .fromToDiv h5,
+  .dateDiv h5,
+  .size h5 {
+    font-size: 12px;
+  }
+
+  .fromToDiv h5 span,
+  .dateDiv h5 span,
+  .size h5 span {
+    font-size: 11px;
   }
 }
