--- a/client/src/pages/Profile/ProfilePage.module.css
+++ b/client/src/pages/Profile/ProfilePage.module.css
@@ -47,10 +47,14 @@
 .infoLine {
   display: flex;
   margin: auto;
-  margin-top: 0;
+  margin-top: 1%;
   margin-bottom: 0;
-  margin-left: 0;
+  margin-left: 3%;
   padding: 3px 0px;
+}
+
+.space {
+  margin-top: 30px;
 }
 
 .infoLine svg {
