--- a/client/src/components/Footer/Footer.module.css
+++ b/client/src/components/Footer/Footer.module.css
@@ -139,6 +139,10 @@
   padding-top: 2rem;
 }
 
+.footerCol ul li a {
+  width: fit-content;
+}
+
 /*responsive*/
 @media (max-width: 740px) {
   .row {
