--- a/client/src/pages/Home/Home.module.css
+++ b/client/src/pages/Home/Home.module.css
@@ -18,10 +18,6 @@
   width: 450px;
 }
 
-/* .homepageContainer {
-  height: 100vh;
-} */
-
 .logoContainer {
   width: 450px;
   display: flex;
@@ -63,6 +59,7 @@
   font-size: 15px;
   line-height: 23px;
   letter-spacing: -0.02em;
+  margin-top: 40px;
 }
 
 .singleButton {
