--- a/client/src/pages/Dashboard/JobCard.module.css
+++ b/client/src/pages/Dashboard/JobCard.module.css
@@ -71,8 +71,7 @@
 .fromToDiv {
   width: 30%;
   display: flex;
-  margin: 0;
-
+  margin: 5px 0px 5px 0px;
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
